new modules configured

--- a/app/src/main/res/drawable-xxhdpi/vertical_gradient.xml
+++ b/app/src/main/res/drawable-xxhdpi/vertical_gradient.xml
@@ -3,6 +3,7 @@
   <gradient
       android:angle="270"
       android:startColor="#DEDEDE"
+      android:centerColor="#80DEDEDE"
       android:endColor=  "#00DEDEDE"
       />
 </shape>
