--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -31,8 +31,8 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:backgroundTint="@color/transparent"
         app:cardCornerRadius="8dp"
-        app:cardElevation="0dp"
-        android:elevation="0dp"
+        app:cardElevation="@dimen/_2sdp"
+        android:elevation="@dimen/_2sdp"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
