--- a/app/src/main/res/layout/activity_my_location_google.xml
+++ b/app/src/main/res/layout/activity_my_location_google.xml
@@ -18,6 +18,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ImageView
+        android:id="@+id/traffic_indecator"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_marginEnd="24dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/traffic_indecator"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/back_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/back_button" />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layer_relocate_container"
         android:layout_width="wrap_content"
@@ -204,8 +217,8 @@
 
     <ImageButton
         android:id="@+id/back_button"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
+        android:layout_width="@dimen/_28sdp"
+        android:layout_height="@dimen/_28sdp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/round_white_buttton"
