--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,5 +25,24 @@
 
     <style name="Theme.RawGPS.AppBarOverlay_" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
         <item name="android:background">@color/white</item>
+
+    </style>
+
+
+
+    <style name="Widget.Theme.MenClothingPhotoEditor.ButtonBar.Fullscreen" parent="">
+        <item name="android:background">@color/black_overlay</item>
+        <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
+    </style>
+
+    <style name="MyTransparentBottomSheetDialogTheme" parent="Theme.MaterialComponents.Light">
+        <!--        <item name="android:background">@color/dialog_bg</item>-->
+        <item name="android:colorBackground">@color/dialog_bg</item>
+    </style>
+
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_up</item>
+        <item name="android:windowExitAnimation">@anim/slide_down</item>
     </style>
 </resources>
