--- a/app/src/main/res/layout/bottomsheet_routefinder.xml
+++ b/app/src/main/res/layout/bottomsheet_routefinder.xml
@@ -4,7 +4,7 @@
     android:id="@+id/bottomSheetRouteFinder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/selector_background"
     app:behavior_hideable="false"
     app:behavior_peekHeight="@dimen/_90sdp"
     app:layout_behavior="@string/bottom_sheet_behavior">
@@ -28,10 +28,14 @@
         <TextView
             android:id="@+id/tvLengthDuration"
             android:layout_width="wrap_content"
-            android:layout_height="38dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:fontFamily="@font/roboto"
-            android:textColor="@color/blue"
+            android:layout_marginStart="16sp"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginBottom="@dimen/_24sdp"
+            android:fontFamily="@font/open_sans_semibold"
+            android:text="Nearby Places"
+            android:textColor="@color/black_text_color"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,13 +45,12 @@
             app:layout_constraintVertical_bias="0.0" />
 
 
-
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/places_rv"
-            android:overScrollMode="never"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_8sdp"
+            android:overScrollMode="never" />
 
     </LinearLayout>
 
