--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/inter_bold</item>
+        <item>@font/open_sans_semibold</item>
         <item>@font/poppins</item>
         <item>@font/roboto</item>
         <item>@font/roboto_medium</item>
