--- a/app/src/main/res/layout/exit_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/exit_bottom_sheet_dialog.xml
@@ -15,7 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/imagePicker"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/_100sdp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="15dp"
@@ -24,62 +24,41 @@
         android:orientation="horizontal"
         android:paddingTop="30dp">
 
-        <LinearLayout
-            android:id="@+id/btnCamera"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:clickable="true"
+        <TextView
+            android:id="@+id/btn_yes"
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_gravity="center"
+            android:background="@drawable/button_background_hollow"
+            android:textAlignment="center"
+            android:textColor="@color/blue"
+            android:textSize="14sp"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="15dp"
-            app:layout_constraintEnd_toStartOf="@+id/btnGallery"
+            android:textStyle="bold"
+            android:text="@string/yes"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_no"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@color/transparent"
-                android:textAlignment="center"
-                android:textColor="@color/black_text_color"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/btnGallery"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:clickable="true"
+        <TextView
+            android:id="@+id/btn_no"
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_gravity="center"
+            android:background="@drawable/button_background"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="bold"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="15dp"
-
+            android:text="No"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/btnCamera"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@color/transparent"
-                android:textAlignment="center"
-                android:textColor="@color/black_text_color"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
+            app:layout_constraintStart_toEndOf="@+id/btn_yes"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
