--- a/app/src/main/res/layout/explore_places.xml
+++ b/app/src/main/res/layout/explore_places.xml
@@ -9,7 +9,7 @@
         android:id="@+id/home_bg_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -186,7 +186,7 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/policy_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/home_bg_view">
+        app:layout_constraintStart_toStartOf="parent">
 
     </FrameLayout>
 
