--- a/app/src/main/res/layout/fragment_qibla_compass.xml
+++ b/app/src/main/res/layout/fragment_qibla_compass.xml
@@ -7,6 +7,15 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/bg_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/txtDegrees"
         android:layout_width="wrap_content"
