--- a/app/src/main/res/layout/loading_dialog.xml
+++ b/app/src/main/res/layout/loading_dialog.xml
@@ -8,8 +8,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/loading_view"
-        android:layout_width="300dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_100sdp"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="0dp"
         app:cardElevation="0dp"
@@ -24,15 +24,14 @@
 
             <com.github.ybq.android.spinkit.SpinKitView
                 android:id="@+id/spin_kit"
-                style="@style/SpinKitView.Circle"
+                style="@style/SpinKitView.Large.DoubleBounce"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
 
-                app:SpinKit_Color="@color/blue"
+                app:SpinKit_Color="#FF9800"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/guideline15"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.4" />
@@ -41,22 +40,14 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"
                 android:text="@string/loading_map_data"
-                android:textColor="@color/blue"
+                android:textColor="@color/black"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="@+id/spin_kit"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/guideline15"
-                app:layout_constraintTop_toTopOf="@+id/spin_kit" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.32" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spin_kit" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
